--- a/rc21/build.gradle
+++ b/rc21/build.gradle
@@ -20,12 +20,12 @@ android {
             }
         }
     }
-    compileSdkVersion 22
-    buildToolsVersion '22.0.1'
+    compileSdkVersion 23
+    buildToolsVersion '23.0.2'
     defaultConfig {
         applicationId "com.renegade.rc"
-        minSdkVersion 21
-        targetSdkVersion 22
+        minSdkVersion 17
+        targetSdkVersion 23
         versionCode 2112107
         versionName '1.0.7'
         signingConfig signingConfigs.config
@@ -44,8 +44,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:22.1.1'
-    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    //    compile 'com.google.android.gms:play-services-base:6.5.+'
 }
