--- a/rc17/build.gradle
+++ b/rc17/build.gradle
@@ -20,12 +20,12 @@ android {
             }
         }
     }
-    compileSdkVersion 22
-    buildToolsVersion '21.1.2'
+    compileSdkVersion 23
+    buildToolsVersion '23.0.2'
     defaultConfig {
         applicationId "com.renegade.rc"
         minSdkVersion 17
-        targetSdkVersion 19
+        targetSdkVersion 23
         versionCode 1712107
         versionName '1.0.7'
         signingConfig signingConfigs.config
@@ -44,7 +44,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:22.1.1'
-    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
 }
