--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,8 @@
+before_script:
+  - export ANDROID_HOME="$ANDROID_HOME_DIR"
+
 build_app:
   stage: build
-  only: master@android/Renegade-Clan
+  only:
+    - master@android/Renegade-Clan
   script: ./gradlew assembleRelease
