--- a/rc17/src/main/AndroidManifest.xml
+++ b/rc17/src/main/AndroidManifest.xml
@@ -8,21 +8,19 @@
         android:allowBackup="false"
         android:icon="@drawable/ic_logo"
         android:label="@string/app_name"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme" >
 
         <activity
-            android:name=".RCApp"
-            android:label="@string/app_name" >
+            android:name=".MainActivity_Tabs"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".MainActivity_Tabs"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
         </activity>
 
     </application>
